feat(STOCK-12) minor optimisation